# telescope-scheduler

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
data/: phase1_agent_observable.csv  phase2_priority_durations.csv
scripts/: compute_oracle.py
server/: Dockerfile  app.py  core.py  environment.py
